src/objects/Industry_Identifier__c.object
<CustomObject>
    <description>Industry Identifier in LPA</description>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Industry Identifiers</relationshipLabel>
        <relationshipName>Industry_Identifiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Identification_Note__c</fullName>
        <label>Identification Note</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Organization__c</fullName>
        <label>Industry Organization</label>
        <picklist>
            <picklistValues>
                <fullName>DNB Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fannie Seller/Servicer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freddie Seller/Servicer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Credit Union Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Industry Identifier</label>
    <nameField>
        <label>Identification #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industry Identifiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>